# jobnik

./: .gitignore  README.md  domain.py  init.ps1  init.sh  job_store.py  jobnik.py  pyproject.toml  util.py
fetcher/: fetcher.py
job_center/: domain.py  job_store.py  job_store_test.py
job_ingestor/: indeed_ingestor.py  indeed_ingestor_test.py  job_cards.json  sample-search-results.html
